--- a/sheet/templates/sheet/alter_owner.html
+++ b/sheet/templates/sheet/alter_owner.html
@@ -85,9 +85,9 @@
 	// button 2 
 	const FillBlank = function(){
 		value = {
-				'name': "{{selected_owner.name}}",
-				'surname': "{{selected_owner.surname}}",
-				'sex': "{{selected_owner.sex}}",
+				'name': "{{selected_owner.owner_name}}",
+				'surname': "{{selected_owner.owner_surname}}",
+				'sex': "{{selected_owner.owner_sex}}",
 				'phone': "{{selected_owner.phone}}",
 				'mail': "{{selected_owner.mail}}",
 				'mail_reminder': "{{selected_owner.mail_reminder}}",
