--- a/sheet/templates/sheet/historic.html
+++ b/sheet/templates/sheet/historic.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <section>
-    <h2 class="mt-5 pl-5">Historique des contacts de {{owner.name}} {{owner.surname}}</h2>
+    <h2 class="mt-5 pl-5">Historique des contacts de {{owner.owner_name}} {{owner.owner_surname}}</h2>
     <article class="mt-5 container">
         <div class="row bg-green">
             <div class="col-2"></div>
