--- a/sheet/templates/sheet/index.html
+++ b/sheet/templates/sheet/index.html
@@ -29,7 +29,7 @@
                         <td><input type="checkbox" id='{{animal.id}}' name='checkbox' value={{animal.id}}></td>
                         <td>{{animal.name}}</a></td>
                         <td>{{animal.admin_data.neuter_status}}</td>
-                        <td>{{animal.species_name}}</td>
+                        <td>{{animal.str_species}}</td>
                         <td>{{animal.race}}</td>
                         <td>{{animal.owner}} </td>
                         <td>{{animal.admin_data.file}}</td>
